# weatherapp

./: .gitignore  db.sqlite3  dump.rdb  pyproject.toml
fproject/: asgi.py  settings.py  urls.py  wsgi.py
test/: load.js
weatherapp/: api.py  serializers.py  urls.py  views.py
weatherapp/templates/: index.html  results.html
weatherapp/templatetags/: tags.py
